# ecal_examples

./: README.md
.github/workflow/: codeql.yml
ecal_pub/: ecal_pointcloud_pub.py  ecal_proto_pub.py  ecal_pub.py  pyproject.toml
ecal_pub/proto_messages/: hello_world.proto  pointcloud_pb2.py
ecal_sub/: ecal_pointcloud_sub.py  ecal_proto_sub.py  ecal_sub.py  pyproject.toml
ecal_sub/proto_messages/: leroy_pointlcoud.proto  leroy_pointlcoud_pb2.py  pointcloud.proto
visualizer/: pointclouds_from_datasets.py  pyproject.toml  random_pointclouds.py
