[tool.poetry]
name = "visualizer"
version = "0.1.0"
description = "Basic point cloud visualization with Open3D."
authors = ["adwaitnaik97 <adwait@aidrivers.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
